<resources>
    <string name="app_name">AgroInsight</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="regresar_al_login">Regresar al login</string>
    <string name="hint_campo_texto">Pregúntame Algo...</string>
    <string name="placeholder">Placeholder</string>
    <string name="home">Menú de fotos</string>
    <string name="plantas">Plantas</string>
    <string name="plagas">Identificar Plagas</string>
    <string name="carrusel_titulo">Tus plantas</string>
    <string name="content_description_iconos">icono</string>
    <string name="usuario_placeholder">Usuario</string>
    <string name="spinner_filtro">Filtro</string>
    <string name="spinner_alfabetico">Alfabético</string>
    <string name="spinner_mas_viejo">Más viejo</string>
    <string name="spinner_mas_nuevo">Más nuevo</string>
    <string name="logoff_mensaje">Sesión cerrada</string>
    <string name="eliminar_planta">Eliminar planta</string>
    <string name="anadir_planta">Añadir planta</string>
    <string name="actualizar_planta">Actualizar planta</string>
    <string name="seleccionar_estado_plaga">Selecciona el nivel de plaga</string>
    <string name="guardar_planta">Guardar planta</string>
    <string name="descripci_n">Descripción</string>
    <string name="tomar_foto_desde_la_c_mara">Tomar foto desde la cámara</string>
    <string name="seleccionar_imagen_desde_galer_a">Seleccionar imagen desde galería</string>
    <string name="nombre_cient_fico_opcional">Nombre científico (opcional)</string>
    <string name="nombre_com_n">Nombre común</string>
    <string name="log_off">Log Off</string>
    <string name="nombreComun">Nombre Común</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="analizar_planta">Analizar Planta</string>
    <string name="nombre_de_la_planta">Nombre de la planta</string>
    <string name="imagen_de_la_planta">Imagen de la planta</string>
    <string name="prediccion_ninguna">Predicción: Ninguna</string>
    <string name="prediccion">"Predicción: "</string>
    <string name="escribe_tu_mensaje">Escribe tu mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="mensaje_del_chatbot">Mensaje del chatbot</string>
    <string name="mensaje_del_agro">Mensaje del agro</string>
    <string name="logo_horizontal">logo_horizontal</string>
    <string name="regresar" />
    <string name="logo_stack">logo_stack</string>
</resources>