<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green">
    <LinearLayout
        android:id="@+id/CuerpoPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/fondo_redondo"
        android:layout_margin="5dp">

        <!-- Perfil -->
        <LinearLayout
            android:layout_marginTop="20dp"
            android:id="@+id/Perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nombre_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/placeholder"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iconoPerfil"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="1dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_arrow"
                android:contentDescription="@string/content_description_iconos"/>

            <ImageView
                android:layout_width="178dp"
                android:layout_marginStart="30dp"
                android:layout_height="36dp"
                android:background="@drawable/agroinsight_horizontal"
                android:contentDescription="@string/logo_horizontal" />

        </LinearLayout>


        <!-- Botones para navegar -->
        <LinearLayout
            android:id="@+id/BotonesMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/homeOption"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textSize="16sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:background="@drawable/button_selector"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"/>


            <TextView
                android:id="@+id/plagasOption"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/plagas"
                android:textSize="16sp"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:background="@drawable/button_selector"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"/>

        </LinearLayout>

        <TextView
            android:layout_marginTop="60dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nombre_de_la_planta"/>

        <EditText
            android:layout_marginTop="10dp"

            android:layout_marginStart="10dp"
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombreComun"
            android:autofillHints="Nombre"
            android:textAlignment="center"
            android:layout_marginEnd="10dp"
            android:inputType="text" />

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/buttonSeleccionarImagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar_imagen"
            android:background="@drawable/botones_comunes"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />

        <ImageView
            android:id="@+id/imageViewPlanta"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/imagen_de_la_planta" />

        <Button
            android:id="@+id/buttonAnalizarPlanta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analizar_planta"
            android:layout_marginTop="30dp"
            android:background="@drawable/botones_comunes"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <!-- Nuevo TextView para mostrar el resultado de la predicción -->
        <TextView
            android:id="@+id/textViewPrediccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:textColor="@color/dark_green"
            android:visibility="gone"
            android:text="@string/prediccion_ninguna"/>

        <!-- Nuevo botón para guardar la planta -->
        <Button
            android:id="@+id/buttonGuardarPlanta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar_planta"
            android:layout_marginTop="30dp"
            android:background="@drawable/botones_comunes"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>
