<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
        android:background="@android:color/transparent"
        android:contentDescription="@string/regresar"
        android:layout_marginEnd="8dp"/>

        <!-- Logo -->
        <ImageView
            android:layout_width="178dp"
            android:layout_height="36dp"
            android:background="@drawable/agroinsight_horizontal"
            android:contentDescription="@string/logo_horizontal" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"/>

    <ListView
        android:id="@+id/chat_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp"
        android:padding="8dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/user_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/escribe_tu_mensaje"
            android:padding="10dp"
            android:background="@color/light_gray"
            android:textColor="@color/black"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            android:background="@drawable/botones_comunes"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
