<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/Fondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo_redondo"
        android:layout_margin="5dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/CuerpoPrincipal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <!-- Perfil -->
                <LinearLayout
                    android:id="@+id/Perfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nombre_usuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/placeholder"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/iconoPerfil"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="16dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_arrow"
                        android:contentDescription="@string/content_description_iconos" />

                    <ImageView
                        android:layout_width="178dp"
                        android:layout_marginStart="30dp"
                        android:layout_height="36dp"
                        android:background="@drawable/agroinsight_horizontal"
                        android:contentDescription="@string/logo_horizontal" />

                </LinearLayout>

                <!-- Zona de preguntas para el chat-bot -->
                <LinearLayout
                    android:id="@+id/CampoPreguntas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/campos_texto"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/input_chatbot"
                        android:layout_width="300dp"
                        android:layout_height="60dp"
                        android:background="@null"
                        android:drawablePadding="8dp"
                        android:hint="@string/hint_campo_texto"
                        android:inputType="text"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:autofillHints="Hola"
                        android:imeOptions="actionSend"/>

                    <ImageView
                        android:id="@+id/icono_busqueda"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="16dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_busqueda"
                        android:contentDescription="@string/content_description_iconos"/>

                </LinearLayout>

                <!-- Botones para navegar -->
                <LinearLayout
                    android:id="@+id/BotonesMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/homeOption"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/home"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="12dp"
                        android:background="@drawable/button_selector"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="4dp"/>


                    <TextView
                        android:id="@+id/plagasOption"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/plagas"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="12dp"
                        android:background="@drawable/button_selector"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="8dp"/>

                </LinearLayout>

                <!-- Carrusel de plantas -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/carrusel_titulo"
                        android:layout_marginStart="10dp"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginEnd="60dp"/>

                    <Spinner
                        android:id="@+id/filtro_carrusel"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:background="@drawable/campos_texto"
                        android:textAlignment="center" />

                </LinearLayout>

                <androidx.constraintlayout.motion.widget.MotionLayout
                    android:id="@+id/ZonaPlantas"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="40dp"
                    android:fillViewport="true"
                    app:layoutDescription="@xml/activity_main_scene">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/ListaPlantas"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"/>
                </androidx.constraintlayout.motion.widget.MotionLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
